Update env examples

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-PGHOST=for local dev can use VM external IP
-PGDATABASE=database
-PGUSER=user name
-PGPASSWORD=password
-PGPORT=port number
+PG_VM_HOST=for local dev can use VM external IP
+PG_VM_DATABASE=database
+PG_VM_USER=user name
+PG_VM_PASSWORD=password
+PG_VM_PORT=port number
